Added Export Active VBProject to toolbar.

--- a/ThisWorkbook.cls
+++ b/ThisWorkbook.cls
@@ -38,6 +38,12 @@ Private Sub Build_AddinMenu()
     cADDIN_CODE_NAME, _
     cmdBar
   
+  vbeAddCommandBarItem _
+    "Export Active VBProject", _
+    "vbeExportActiveVBProject", _
+    cADDIN_CODE_NAME, _
+    cmdBar
+  
   cmdBar.RowIndex = 6
   cmdBar.Visible = True
 End Sub
