--- a/src/vbeCommandHandler.cls
+++ b/src/vbeCommandHandler.cls
@@ -7,6 +7,7 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
+' #RelativePath = src
 Option Explicit
 
 Public WithEvents EvtHandler As VBIDE.CommandBarEvents
