convert the project name to an object reference

--- a/src/vbeVBComponent.cls
+++ b/src/vbeVBComponent.cls
@@ -7,8 +7,6 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-' #RelativePath = src
-
 Option Explicit
 
 '-----------------------------------------------------------------
@@ -23,7 +21,7 @@ Option Explicit
 Private m_Options As Collection
 Private m_Index As Long ' index in the collection
 Private m_ModuleName As String ' name of the Code Module
-Private m_ProjectName As String ' name of the Project
+Private m_Project As VBProject ' name of the Project
 Private m_ComponentType As vbext_ComponentType
 
 Private m_Parsed As Boolean ' flag to tell if the CodeModule has been checked for options
@@ -34,8 +32,8 @@ Private m_Parsed As Boolean ' flag to tell if the CodeModule has been checked fo
 Public Property Get Index() As Long: Index = m_Index: End Property
 Public Property Let Index(Index As Long): m_Index = Index: End Property
 
-Public Property Get ProjectName() As String: ProjectName = m_ProjectName: End Property
-Public Property Let ProjectName(ProjectName As String): m_ProjectName = ProjectName: End Property
+Public Property Get Project() As VBProject: Project = m_Project: End Property
+Public Property Set Project(Project As VBProject): m_Project = Project: End Property
 
 Public Property Get ModuleName() As String: ModuleName = m_ModuleName: End Property
 Public Property Let ModuleName(ModuleName As String): m_ModuleName = ModuleName: End Property
@@ -45,7 +43,7 @@ Public Property Let ComponentType(ComponentType As vbext_ComponentType): m_Compo
 
 Public Property Get VBComponent() As Object
   On Error GoTo Local_Error
-  Set VBComponent = Application.VBE.VBProjects(ProjectName).VBComponents(ModuleName)
+  Set VBComponent = Project.VBComponents(ModuleName)
   
   On Error GoTo 0
   Exit Property
@@ -55,7 +53,7 @@ Local_Error:
 End Property
 Public Property Set VBComponent(VBComponent As Object)
   Me.ModuleName = VBComponent.Name
-  Me.ProjectName = VBComponent.Collection.Parent.Name
+  Me.Project = VBComponent.Collection.Parent
   Me.ComponentType = VBComponent.Type
 End Property
 
