add export options for development

--- a/src/vbeOption.cls
+++ b/src/vbeOption.cls
@@ -7,6 +7,8 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
+'#RelativePath = src
+
 Option Explicit
 
 Private m_optionString As String
