added arg collection to option class

--- a/src/vbeOption.cls
+++ b/src/vbeOption.cls
@@ -18,6 +18,7 @@ Private m_optionString As String
 Private m_typename
 Private m_default As Variant
 Public value As Variant
+Private m_args As Variant
 
 ' these are derived from the optionString
 Private m_name As String
@@ -29,9 +30,15 @@ Const cBOOLEAN As String = "bool"
 Const cSTRING As String = "string"
 Const cNUMBER As String = "num"
 
-Public Property Get optionString() As String: optionString = m_optionString: End Property
-Public Property Let optionString(optionString As String)
-  parseOptionString optionString
+
+Public Property Get args() As Variant: args = m_args: End Property
+
+' store and validate the args provided
+Public Property Let args(args As Variant)
+  m_args = args
+  
+  ' TODO: validate the number of args matches the expected args
+  ' TODO: validate the args based on typename
 End Property
 
 ' Get the default value.
@@ -54,6 +61,22 @@ Public Property Let default(default As Variant)
   value = m_default
 End Property
 
+' The expected args are derived from the optionString
+Public Property Get expectedArgs() As Variant: expectedArgs = m_expectedArgs: End Property
+
+' Get the number of expected arguments for this option
+Public Property Get expectedArgsCount() As Long
+  expectedArgsCount = UBound(m_expectedArgs) - LBound(m_expectedArgs) + 1
+End Property
+
+' The name is derived from the optionString.
+Public Property Get name() As String: name = m_name: End Property
+
+Public Property Get optionString() As String: optionString = m_optionString: End Property
+Public Property Let optionString(optionString As String)
+  parseOptionString optionString
+End Property
+
 Public Property Get typename() As String: typename = m_typename: End Property
 Public Property Let typename(typename As String)
   Dim tmp As String
@@ -61,25 +84,16 @@ Public Property Let typename(typename As String)
   tmp = LCase(typename)
   
   ' Validate the typename before storing
-  If tmp <> cBOOLEAN And tmp <> cSTRING And tmp <> cNUMBER Then GoTo ErrorHandler
+  If tmp <> cBOOLEAN And tmp <> cSTRING And tmp <> cNUMBER Then GoTo errorHandler
     
   m_typename = tmp
   
   On Error GoTo 0
   Exit Property
   
-ErrorHandler:
+errorHandler:
   Err.Raise 9999, "vbeOptionParser::getEmptyDefault", _
             "The typename is not defined or is not one of the following: " & cBOOLEAN & ", " & cSTRING & ", or " & cNUMBER
-End Property
-
-' The name and the expected args are derived from the optionString
-Public Property Get name() As String: name = m_name: End Property
-Public Property Get expectedArgs() As Variant: expectedArgs = m_expectedArgs: End Property
-
-' Get the number of expected arguments for this option
-Public Property Get expectedArgsCount() As Long
-  expectedArgsCount = UBound(m_expectedArgs) - LBound(m_expectedArgs) + 1
 End Property
 
 ' Parse the option string for name and expected args
@@ -128,13 +142,13 @@ Private Function getEmptyDefault() As Variant
     Case cNUMBER
       getEmptyDefault = 0
     Case Else
-      GoTo ErrorHandler
+      GoTo errorHandler
   End Select ' Me.typename
   
   On Error GoTo 0
   Exit Function
   
-ErrorHandler:
+errorHandler:
   Err.Raise 9999, "vbeOptionParser::getEmptyDefault", _
             "The typename is not defined or is not one of the following: " & cBOOLEAN & ", " & cSTRING & ", or " & cNUMBER
 End Function
